# RESTedDonkey

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt  server.py  setup.py  storage.py  tox.ini  zodb-tests.conf  zodb.conf
donkey/: core.py  storage.py
donkey/tests/: test_api.py  test_manager.py  utils.py
static/: index.html
static/js/: app.js  controllers.js  filters.js  services.js
static/partials/: resource-detail.html  resource-list.html
var/: README.md
