[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[project]
name = "RESTedDonkey"
description = "Instant REST backend"
requires-python = ">=3.10"
version = "0.0.2"
dependencies = ["klein", "ZODB3", "BTrees", "repoze.catalog", "clint", "docopt"]

[tool.hatch.envs.default]
python = "3.10"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 120
target-version = 'py310'

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
